--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,10 @@
+
+@font-face {
+  font-family: 'Avenir';
+  src: url('/fonts/AvenirNextLTPro-Regular.woff2') format('woff2'),
+    url('/fonts/AvenirNextLTPro-Regular.woff') format('woff');
+}
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -40,7 +47,7 @@
   --card-border-rgb: 131, 134, 135;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
@@ -100,8 +107,8 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   html {
-    color-scheme: dark;
+    color-scheme: light;
   }
 }
