--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -181,3 +181,7 @@ html {
   color: #000;
   font-weight: 500;
 }
+:root {
+  --animate-duration: 1000ms!important;
+  /* --animate-delay: 0.9s; */
+}
