--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -145,6 +145,7 @@ table {
 html {
   font-size: 10px; /*  62.5% of 16px */
   font-family: "Avenir", sans-serif;
+  overflow-x: hidden!important;
 }
 
 .scroll-arrow {
