--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -149,7 +149,7 @@ html {
 }
 
 .scroll-arrow {
-  animation: grow 1000ms ease infinite alternate;
+  animation: grow 3000ms ease infinite alternate;
 }
 
 @keyframes flash {
@@ -163,13 +163,9 @@ html {
 }
 
 @keyframes grow {
-  from {
-    transform: scale(0.8);
-  }
-
-  to {
-    transform: scale(1.2);
-  }
+   0%, 20%, 50%, 80%, 100% {transform: translateY(0);} 
+   40% {transform: translateY(-30px);} 
+   60% {transform: translateY(-15px);} 
 }
 
 ::selection {
