--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -145,7 +145,7 @@ table {
 html {
   font-size: 10px; /*  62.5% of 16px */
   font-family: "Avenir", sans-serif;
-  overflow-x: hidden!important;
+  overflow-x: hidden !important;
 }
 
 .scroll-arrow {
@@ -163,9 +163,19 @@ html {
 }
 
 @keyframes grow {
-   0%, 20%, 50%, 80%, 100% {transform: translateY(0);} 
-   40% {transform: translateY(-30px);} 
-   60% {transform: translateY(-15px);} 
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
 }
 
 ::selection {
@@ -177,4 +187,9 @@ html {
   --animate-duration: 1s !important;
   /* --animate-repeat: 2;
   --animate-delay: 0.9s; */
+}
+a {
+  color: #fff;
+  text-decoration: none;
+  transition: all 0.3s ease;
 }
